--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 
 DATABASE_URL='postgresql://clientdb_owner:ybpmV5Za9GBU@ep-autumn-heart-a5u0yowt.us-east-2.aws.neon.tech/clientdb?sslmode=require'
 
-RESEND_API_KEY='re_iSGwPRRz_8sq11jVGLYfvohwiuKJJVLVq'
+RESEND_API_KEY=re_iSGwPRRz_8sq11jVGLYfvohwiuKJJVLVq
 
-NEXT_PUBLIC_BASE_URL='auth-recover.pages.dev'
+NEXT_PUBLIC_BASE_URL=http://localhost:3000
